--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "I can pass a string as a parameter, and it will check to see whether that string contains either a unix timestamp or a natural language date. If it does, it returns both the Unix timestamp and the natural language form of that date.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node server.js"
   },
   "author": "vinaypuppal",
   "license": "MIT",
