--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node server.js",
-    "dev":"nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "vinaypuppal",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
+    "moment": "^2.13.0",
     "morgan": "^1.7.0",
     "nodemon": "^1.9.2"
   }
